<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:textAlignment="center"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/linear_fond"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center">

        <CheckBox
            android:id="@+id/checkBox_autostart"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/checkBoxStyle"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/autostart" />

        <CheckBox
            android:id="@+id/checkBox_dark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/checkBoxStyle"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/theme" />

        <Button
            android:id="@+id/button_file_choose"
            android:layout_width="fill_parent"
            android:background="@drawable/button_black2"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:onClick="FILE_CHOOSE"
            android:text="@string/file_choose"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/linear_son"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textV_choose"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:maxLines="3"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="0dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@drawable/shape_rectangle_black"/>
            <Button
                android:id="@+id/button_clear"
                android:layout_width="fill_parent"
                android:background="@drawable/button_black2"
                android:layout_height="fill_parent"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:onClick="CLEAR"
                android:text="@string/clear"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_save"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_cancel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/button_black2"
                android:textColor="@color/white"
                android:layout_weight="50"
                android:onClick="SAVE"
                android:text="@string/cancel" />
            <Button
                android:id="@+id/button_save"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/button_black2"
                android:textColor="@color/white"
                android:layout_weight="50"
                android:onClick="SAVE"
                android:text="@string/save" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAlignment="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textV1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/credits"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>